Add "Unbook" button
Do not "hide" and "show" buttons by javascript, use css instead.

Do not unbind actions, return from function if not applicable instead.

No release note or ticket, because only used internally.
Ticket: none
Release-Note: none

--- a/pub/System/TimeTrackerPlugin/timetracker.css
+++ b/pub/System/TimeTrackerPlugin/timetracker.css
@@ -40,3 +40,12 @@ table.TimeTrackerTable th {
 span.TimeTrackerStarted {
     display: none;
 }
+.TimeTrackerBooked .TimeTrackerBook,
+.TimeTrackerActive .TimeTrackerBook,
+.TimeTrackerActive .TimeTrackerUnBook,
+.TimeTrackerUnBook {
+    display: none;
+}
+.TimeTrackerBooked .TimeTrackerUnBook {
+    display: initial;
+}
