--- a/pub/System/TimeTrackerPlugin/timetracker.css
+++ b/pub/System/TimeTrackerPlugin/timetracker.css
@@ -21,12 +21,15 @@ table.TimeTrackerTable th {
     background-color: #9d9;
     border: 1px solid black;
 }
-.TimeTrackerActivity {
+.TimeTrackerBordered {
     border: 1px solid black;
     height: 100%;
 }
-.TimeTrackerBooked .TimeTrackerActivity {
+.TimeTrackerBooked .TimeTrackerBordered {
     border: none;
+}
+.TimeTrackerValue {
+    min-height: 1em;
 }
 .TimeTrackerBooked {
     background-color: #dff;
@@ -48,4 +51,7 @@ span.TimeTrackerStarted {
 }
 .TimeTrackerBooked .TimeTrackerUnBook {
     display: initial;
+}
+.TimeTrackerInRevision {
+    display: none;
 }
