Change pointer for 'buttons'; rename css class
Give clickable things a pointer cursor.
Renaming TimeTrackerBordered -> TimeTrackerResume, because it does more
than adding a border. This is also reflected in the JS, which now simply
binds on the TimeTrackerResume class, instead of some awkward selector.

Ticket: #9097

--- a/pub/System/TimeTrackerPlugin/timetracker.css
+++ b/pub/System/TimeTrackerPlugin/timetracker.css
@@ -21,9 +21,10 @@ table.TimeTrackerTable th {
     background-color: #9d9;
     border: 1px solid black;
 }
-.TimeTrackerBordered {
+.TimeTrackerResume {
     border: 1px solid black;
     height: 100%;
+    cursor: pointer;
 }
 .TimeTrackerBooked .TimeTrackerBordered {
     border: none;
@@ -39,6 +40,7 @@ table.TimeTrackerTable th {
     border: 1px solid #aaa;
     margin: 1px;
     padding: 1px;
+    cursor: pointer;
 }
 span.TimeTrackerStarted {
     display: none;
