--- a/pub/System/TimeTrackerPlugin/timetracker.css
+++ b/pub/System/TimeTrackerPlugin/timetracker.css
@@ -1,5 +1,5 @@
 table.TimeTrackerTable,
-table.TimeTrackerControlls,
+.TimeTrackerGeneralUtilities > table,
 div.TimeTrackerMessage {
     border: 1px solid black;
 }
@@ -11,7 +11,7 @@ div.TimeTrackerMessage {
 .TimeTrackerError {
     background-color: red;
 }
-table.TimeTrackerControlls {
+.TimeTrackerGeneralUtilities > table {
     margin-top: 5px;
 }
 table.TimeTrackerTable th {
@@ -56,4 +56,12 @@ span.TimeTrackerStarted {
 }
 .TimeTrackerInRevision {
     display: none;
+}
+div.TimeTrackerTemplates, div.TimeTrackerQuickActions {
+    float:left;
+    border: 1px solid black;
+    margin-left: 10px;
+}
+div.TimeTrackerGeneralUtilities {
+    float: left;
 }
