Do not use pointer cursor when activity is booked
Can no longer be activated, so wrong cursor.

Not the nicest of all css though...

--- a/pub/System/TimeTrackerPlugin/timetracker.css
+++ b/pub/System/TimeTrackerPlugin/timetracker.css
@@ -26,6 +26,9 @@ table.TimeTrackerTable th {
     height: 100%;
     cursor: pointer;
 }
+.TimeTrackerBooked .TimeTrackerResume {
+    cursor: inherit;
+}
 .TimeTrackerBooked .TimeTrackerBordered {
     border: none;
 }
