--- a/pub/System/TimeTrackerPlugin/timetracker.css
+++ b/pub/System/TimeTrackerPlugin/timetracker.css
@@ -30,6 +30,22 @@
 #timeTracker input.small {
     width: 4em;
 }
+#timeTracker form label.validated {
+    background-color: #00cc66;
+}
+#timeTracker form label.validated input,
+#timeTracker form label.validated select,
+#timeTracker tbody tr:not(.booked-redmine) td.validated {
+    color: #00cc66;
+}
+#timeTracker form label.unvalidated {
+    background-color: #a4b8cc;
+}
+#timeTracker form label.unvalidated input,
+#timeTracker form label.unvalidated select,
+#timeTracker tbody tr:not(.booked-redmine) td.unvalidated {
+    color: #666666;
+}
 #timeTracker legend span {
     font-weight: bold;
     margin-right: 14px;
@@ -59,12 +75,6 @@
 }
 #timeTracker tbody tr.booked-redmine {
     background-color: #00cc66;
-}
-#timeTracker tbody tr:not(.booked-redmine) td.validated {
-    color: #00cc66;
-}
-#timeTracker tbody tr:not(.booked-redmine) td.unvalidated {
-    color: #666666;
 }
 #timeTracker span.booked-redmine {
     background-color: white;
@@ -123,12 +133,6 @@
     float: left;
     margin-right: 10px;
 }
-#timeTracker #addActivity label.validated {
-    background-color: #00cc66;
-}
-#timeTracker #addActivity label.unvalidated {
-    background-color: #a4b8cc;
-}
 
 #timeTracker #total {
     max-width: 1200px;
@@ -155,6 +159,50 @@
 }
 #timeTracker #daySelection tr {
     cursor: unset;
+}
+
+/* Tooltip from w3schools */
+/* Tooltip container */
+.tooltip {
+    position: relative;
+    display: inline-block;
+}
+/* Tooltip text */
+.tooltip .tooltiptext {
+    visibility: hidden;
+    width: 300px;
+    background-color: #555;
+    color: #fff;
+    text-align: center;
+    padding: 5px;
+    border-radius: 6px;
+
+    /* Position the tooltip text */
+    position: absolute;
+    z-index: 1;
+    bottom: 125%;
+    left: 50%;
+    margin-left: -150px;
+
+    /* Fade in tooltip */
+    opacity: 0;
+    transition: opacity 0.5s;
+}
+/* Tooltip arrow */
+.tooltip .tooltiptext::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: #555 transparent transparent transparent;
+}
+/* Show the tooltip text when you mouse over the tooltip container */
+.tooltip:hover .tooltiptext {
+    visibility: visible;
+    opacity: 1;
 }
 
 /*
